--- a/contact.html
+++ b/contact.html
@@ -25,19 +25,10 @@
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-        <p>I'm a stay at home dad that is looking to try and get better with his web design experience, both professionally and as a hobby.</p>
-      </div> 
-
-      <div class="card">
-        <h2>Goals</h2>
-        <p>I would like to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-        </ul>
-        <p>I’d like to work for anyone that is wanting an artistic mind for their web experience.</p>
+        <h2>Contact Methods</h2>
+        <p>(555) 555-5555</p>
+        <p>demoemail@email.com</p>
+        <p>123 Address Lane Lexington, KY 44444</p>
       </div> 
 
     </main>
