--- a/experience.html
+++ b/experience.html
@@ -25,19 +25,20 @@
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-        <p>I'm a stay at home dad that is looking to try and get better with his web design experience, both professionally and as a hobby.</p>
+        <h2>History</h2>
+        <p>Throughout my life, I've had a sprinkling of experiences in technology. Since highschool, I have taken vocational classes in computer aided drafting, networking, and general PC repair.</p>
+        <p>Some of my past employment includes shadowing a technician at PlanetEarthPC, working as a callcenter troubleshooting agent for Apple, and a Best Buy Mobile sales representative.</p>
       </div> 
 
       <div class="card">
-        <h2>Goals</h2>
-        <p>I would like to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
+        <h2>I have experience in software such as:</h2>
+        <ul class="software">
+          <li>Adobe Photoshop</li>
+          <li>Visual Studio Code</li>
+          <li>Microsoft Office</li>
+          <li>Android OS</li>
+          <li>AutoCAD</li>
         </ul>
-        <p>I’d like to work for anyone that is wanting an artistic mind for their web experience.</p>
       </div> 
 
     </main>
